# libventrilo3

./: Makefile.am  Makefile.in  README  aclocal.m4  bootstrap  config.h.in  configure  configure.ac
examples/: Makefile  Makefile.am  Makefile.in  connection  connection.c  jukebox.c
examples/.deps/: connection.Po
include/: ventrilo3.h
src/: Makefile.am  Makefile.in  api.c  data.c  dsp.c  encryption.c  handshake.c  handshake.h  libventrilo3.c  libventrilo3.h  message.c  message.h  msgparse.c  msgparse.h  network.c  ventrilo3.h
